--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 100px;
+  margin-top: 40px;
 }
 
 h1 {
@@ -26,7 +26,7 @@ h2 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   font-size: 1.2rem;
-  color: rgb(235, 222, 206);
+  color: rgb(245, 186, 147);
   margin-top: 0.2rem;
   margin-bottom: 3rem;
 }
@@ -54,8 +54,7 @@ p {
 }
 
 .kuvajateksti img {
-  width: 400px;
-  border-radius: 10px;
+  width: 500px;
 }
 
 img.cv-kuva {
@@ -70,7 +69,7 @@ img.cv-kuva {
 }
 
 .navbar {
-  background-color: #ffffff;
+  background-color: #5a5856;
   padding: 25px 20px;
   display: flex;
   justify-content: flex-end;
@@ -88,7 +87,7 @@ img.cv-kuva {
 .nav-links li a {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
-  color: rgb(0, 0, 0);
+  color: rgb(235, 222, 206);
   text-decoration: none;
   font-size: 0.9rem;
 }
@@ -100,13 +99,12 @@ img.cv-kuva {
 .button1 {
   display: inline-block;
   width: 120px;
-  background-color: rgb(174, 194, 197);
+  background-color: rgb(150, 207, 216);
   color: black;
   padding: 10px 20px;
   margin: 5px;
   text-decoration: none;
   text-align: center;
-  border-radius: 5px;
   transition: background-color 0.3s ease;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
@@ -121,13 +119,12 @@ img.cv-kuva {
   display: inline-block;
   width: 120px;
   background-color: rgb(75, 73, 69);
-  border: 1px solid rgb(174, 194, 197);
-  color: rgb(174, 194, 197);
+  border: 1px solid rgb(150, 207, 216);
+  color: rgb(150, 207, 216);
   padding: 10px 20px;
   margin: 5px;
   text-decoration: none;
   text-align: center;
-  border-radius: 5px;
   transition: background-color 0.3s ease;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
@@ -138,3 +135,55 @@ img.cv-kuva {
   background-color: #97a6a8;
 }
 
+
+.projektiosio {
+  padding: 40px 0;
+  color: white;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 800;
+  font-size: 1.5rem;
+  background-color: #5a5856;
+}
+
+.kuvaosio {
+  max-width: 1000px;
+  margin: 30px auto; 
+  padding: 40px 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 80px;
+  color: white;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 800;
+  font-size: 1.5rem;
+  background-color: #5a5856;
+  border-radius: 12px;
+}
+
+.kuvakortti img {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  transition: transform 0.3s ease;
+}
+
+.kuvakortti img:hover {
+  transform: scale(1.1);
+}
+
+.kuvakortti a {
+  text-decoration: none;
+}
+
+strong {
+  font-weight: 600;
+}
+
+li {
+   font-family: 'Montserrat', sans-serif;
+   color: white;
+
+}
