--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   text-align: left;
   margin: 0;
   min-height: 100vh;
+
 }
 
 .container {
@@ -36,6 +37,14 @@ h2 {
 h3 {
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
+
+h4 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  color: rgb(66, 66, 66);
+}
+
 
 p {
    margin-bottom: 2rem;
@@ -262,8 +271,9 @@ li {
   gap: 20px;
   flex-wrap: wrap;
   margin: 0 auto;
-  margin-top: 40px;
-  max-width: 1200px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  max-width: 1300px;
 }
 
 .esittely .content {
@@ -280,11 +290,10 @@ li {
   border-radius: 8px;
   border: 1px solid white;
   object-fit: cover;
-  margin-left: 50px;
 }
 
 .esittely h1 {
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 40px auto 10px auto;
 
 }
@@ -293,5 +302,52 @@ li {
   display: block;
   width: max-content;
   margin: 5px auto 0 auto;
+}
+
+.esittely .kuva-ja-tyokalut {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 400px; 
+  margin-left: 80px; 
+}
+
+.esittely .kuva-ja-tyokalut p {
+  margin: 0px 0px 10px 10px;
+  font-size: 0.9rem;
+}
+
+.kuva-ja-tyokalut p strong {
+  display: block;
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 25px;
+}
+
+
+.tool-list {
+  columns: 2;
+  column-gap: 10px;
+  width: 400px;
+  margin-left: 40px;
+}
+
+/* Yhteys */
+
+.yhteystiedot {
+  margin-top: 60px;
+}
+
+
+/*Footer*/
+
+.footer {
+  width: 100%;
+  background-color: #e4e4e4;
+  color: #eee;
+  text-align: center;
+  padding: 15px 10px;
+  font-size: 0.9rem;
+  border-top: 1px solid white;
 }
 
