--- a/style.css
+++ b/style.css
@@ -1,17 +1,21 @@
+
+
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to bottom right, #c9c8c8, #f9f9f9);
   color: #333;
   text-align: left;
   margin: 0;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
-
 }
 
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  margin-top: 40px;
+  margin-top: 70px;
+  flex: 1;
 }
 
 h1 {
@@ -263,15 +267,19 @@ li {
   
 }
 
+
 /* Esittely */
 
+
+
 .esittely .esittely-container {
+  flex: 1;
   display: flex;
   align-items: flex-start;
   gap: 20px;
   flex-wrap: wrap;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 70px;
   margin-bottom: 50px;
   max-width: 1300px;
 }
@@ -281,6 +289,7 @@ li {
   min-width: 250px;
   text-align: justify;
   margin-bottom: 50px;
+  margin-top: 0px;
   
 }
 
@@ -294,7 +303,7 @@ li {
 
 .esittely h1 {
   max-width: 1300px;
-  margin: 40px auto 10px auto;
+  text-align: left;
 
 }
 
@@ -310,6 +319,7 @@ li {
   align-items: center;
   max-width: 400px; 
   margin-left: 80px; 
+  margin-top: 100px;
 }
 
 .esittely .kuva-ja-tyokalut p {
@@ -334,6 +344,10 @@ li {
 
 /* Yhteys */
 
+.yhteys .container {
+  min-width: 1300px;
+}
+
 .yhteystiedot {
   margin-top: 60px;
 }
@@ -346,7 +360,7 @@ li {
   background-color: #e4e4e4;
   color: #eee;
   text-align: center;
-  padding: 15px 10px;
+  padding: 10px 5px;
   font-size: 0.9rem;
   border-top: 1px solid white;
 }
