--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  margin-top: 70px;
+  margin-top: 30px;
   flex: 1;
 }
 
@@ -497,12 +497,12 @@ li {
     gap: 35px;
     background-color: rgb(199, 198, 198);
     position: fixed;
-    top: 35px;   /* juuri hamburgerin alapuolelle */
+    top: 35px;
     right: 0;
     left: 0;
     height: 35vh;
 
-    padding-top: 30px; /* siirtää linkkejä hieman ylemmäs */
+    padding-top: 30px;
     box-sizing: border-box;
     border-radius: 0;
     box-shadow: none;
@@ -559,4 +559,15 @@ li {
 .hamburger.active .bar:nth-child(3) {
   transform: rotate(-45deg) translate(5px, -5px);
 }
+
+.button3 {
+  display: block;
+  margin: 40px auto 0 auto; /* ylhäältä vähän tilaa, ja keskitys */
+  width: 80%;
+  max-width: 250px;
+  padding: 12px 0;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 }
