--- a/style.css
+++ b/style.css
@@ -325,6 +325,8 @@ li {
 }
 
 
+
+
 /* Esittely */
 
 
@@ -632,9 +634,9 @@ li {
     top: 35px;
     right: 0;
     left: 0;
-    height: 35vh;
 
     padding-top: 30px;
+    padding-bottom: 30px;
     box-sizing: border-box;
     border-radius: 0;
     box-shadow: none;
@@ -656,10 +658,9 @@ li {
 
 
   .nav-links.active {
-    max-height: 80dvh;
-    min-height: 45dvh;
+    max-height: 100vh;
     opacity: 1;
-    overflow: auto;
+    overflow: visible;
   }
 
   .hamburger {
