--- a/style.css
+++ b/style.css
@@ -499,6 +499,78 @@ li {
 
 }
 
+/* Tabletit */
+
+@media (min-width: 769px) and (max-width: 1024px) {
+
+.aloitusteksti {
+  width: 350px;
+  padding: 0;
+}
+
+ 
+.kuvajateksti img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
+
+  .projektiosio {
+    padding: 30px;
+  }
+
+  
+  .esittely .content {
+    order: 1;
+    margin: 0 20px 30px 20px;
+    text-align: left;
+  }
+
+  .esittely .kuva-ja-tyokalut {
+    order: 2;
+    margin: 0 20px;
+    max-width: 100%;
+  }
+
+  .esittely .esittelykuva {
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto 20px auto;
+  }
+
+  .tool-list {
+    width: 100%;
+    columns: 2;
+    column-gap: 20px;
+    margin-left: 0;
+    padding: 0 20px;
+  }
+
+  .esittely .content a.button1 {
+    margin: 20px auto 0 auto;
+  }
+
+   .kuvaosio {
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    padding: 20px 20px;
+    max-width: 100%;
+  }
+
+  .button3 {
+  display: block;
+  margin: 40px auto 0 auto;
+  width: 80%;
+  max-width: 250px;
+  padding: 12px 0;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+  
+}
+
 @media (max-width: 768px) {
   
   h1 {
@@ -568,15 +640,7 @@ li {
   }
 
 
-  .button1,
-  .button2,
-  .button3 {
-    width: 100%;
-    max-width: 250px;
-    font-size: 0.8rem;
-    padding: 12px 0;
-  }
-
+  
   .button3 {
     position: static;
     margin-top: 30px;
